--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "cop-js-todo-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^3.6.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
