feat: create sls example

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-node_modules/
+.serverless
+*.log
+npm-debug.log
+pids
+*.pid
+*.seed
+dist
+lib-cov
+coverage
+.grunt
+.lock-wscript
+node_modules
+**/.idea
+.DS_Store
+.tmp
+admin.env
+.env
+tmp
